fixing text overlap issues on mobile version of tiles

--- a/style_mobile.css
+++ b/style_mobile.css
@@ -59,7 +59,7 @@ font-weight: lighter;
 
 .content-section{
 
-    font-size: 2.5em;
+    font-size: 2.0em;
     color: #777;
 }
 
@@ -72,7 +72,7 @@ font-weight: lighter;
 
 
 .container {
-    max-width: 900px;
+   
 	padding-bottom: 3vh;
 }
 
